Fixed overflow for wider sidebar items

--- a/src/Better_Map_Widget.css
+++ b/src/Better_Map_Widget.css
@@ -74,6 +74,7 @@ body {
 #sidebarArea {
 	width: 300px;
 	flex-shrink: 0;
+	overflow-x: hidden;
 	overflow-y: auto;
 	border: 1px solid #aaa;
 	border-left: none;
@@ -146,6 +147,7 @@ body {
 	min-width: 0;
 }
 #sidebarArea .sidebar-item-name {
+	display: block;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
